--- a/Phone/main/res/values/dimens.xml
+++ b/Phone/main/res/values/dimens.xml
@@ -21,8 +21,11 @@
     <dimen name="white_button_left_right_padding">10dp</dimen>
     <dimen name="white_button_margin_top">15dp</dimen>
     <dimen name="modal_top_padding">17dp</dimen>
-    <dimen name="moadal_top_margin">45dp</dimen>
-    <dimen name="moadal_bottom_margin">45dp</dimen>
+    <dimen name="modal_right_padding">17dp</dimen>
+    <dimen name="modal_left_padding">17dp</dimen>
+    <dimen name="modal_bottom_padding">15dp</dimen>
+    <dimen name="modal_top_margin">15dp</dimen>
+    <dimen name="modal_bottom_margin">45dp</dimen>
     
     <!--  Login Bottom Buttons -->
     <dimen name="login_bottom_button_height">50dp</dimen>
