--- a/Phone/main/res/values/strings_login.xml
+++ b/Phone/main/res/values/strings_login.xml
@@ -51,4 +51,46 @@
     <string name="logout_sucess">
         You are now logged out. Thank you for using Discover Mobile.
     </string>
+<!--  LOGIN ERRORS -->
+	<string name="account_number_reregistered">
+	    We\'re sorry, you may no longer use this Discover card account number to access Discover.com Mobile. 
+	    Instead, please visit www.discover.com to create a User ID and password. If you have any questions, 
+	    please contact Customer Service at 1&#8211;877&#8211;742&#8211;7822 .
+	</string>
+	<string name="account_setup_pending">
+	    Your online access is still being set up. Please try back again later.
+	</string>
+	<string name="account_number_changed">
+	    Your Discover Card Account Number has been changed. In order to access your account through the 
+	    mobile channel, you must first log in to the Account Center on www.discover.com. For more information, 
+	    please contact Customer Service at 
+	    <a href='tel:18777427822' class='eCertBlueLink'>1&#8211;877&#8211;742&#8211;7822</a>
+	</string>
+	<string name="internal_server_error_500">
+	    <h3>Discover.com Mobile Error</h3>We\'re sorry. Your request cannot be completed at this time. 
+	    We sincerely apologize for this inconvenience and are working to resolve this issue soon.
+	     For further assistance please call 
+	     <a href='tel:18777427822' class='eCertBlueLink'>1&#8211;877&#8211;742&#8211;7822</a>
+	</string>
+	<string name="internal_server_error_503">
+	    We\'re sorry. Our services are unavailable at this time. <br/>We apologize for any inconvenience.
+	</string>
+	<string name="forbidden_403">
+	    The request has been understood but has been refused due to incompatible client version.
+	</string>
+	<string name="temporary_outage">
+	    <h3>We\'re sorry.</h3><br/>Some of our web site features are unavailable at this time. 
+	    We sincerely apologize for this temporary inconvenience and are working to resolve the issue.
+	</string>
+	<string name="planned_outage_one">
+	    We\'re sorry. We will be performing a system maintenance between 1 a.m. and 6 a.m. Eastern Time.
+	     We apologize for any inconvenience. Please try again later, or for immediate assistance call 
+		 <a href='tel:18777427822' class='eCertBlueLink'>1&#8211;877&#8211;742&#8211;7822</a>.
+	</string>
+	<string name="cashback_bonus_unavailable">
+	    Cashback Bonus is currently unavailable. We apologize for the inconvenience. Please try again later.
+	</string>
+	<string name="no_data_found">
+	    No data found.
+	</string>
 </resources>
