--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -59,7 +59,7 @@
         <item name="android:textSize">@dimen/body_copy_max</item>
         <item name="android:paddingLeft">@dimen/orange_button_left_right_padding</item>
         <item name="android:paddingRight">@dimen/orange_button_left_right_padding</item>
-        <item name="android:background">@drawable/orange_button</item>
+        <item name="android:background">@drawable/call_to_action_button</item>
         <item name="android:paddingTop">@dimen/call_to_actions_padding</item>
         <item name="android:paddingBottom">@dimen/call_to_actions_padding</item>
         <item name="android:layout_gravity">center_horizontal</item>
