--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -205,5 +205,10 @@
         <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
     </style>
+    
+    <style name="modal_error_image">
+        <item name="android:layout_marginTop">@dimen/between_related_elements_padding</item>
+        <item name="android:layout_marginLeft">@dimen/modal_left_padding</item>
+    </style>
 
 </resources>
