--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -193,6 +193,11 @@
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>        
     </style>
     
+    <style name="edit_copy" parent="discover_text">
+       
+
+    </style>
+    
     <style name="white_button">
         <item name="android:textColor">@color/sub_copy</item>
         <item name="android:textSize">@dimen/body_copy_min</item>
